# napari-locan

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CITATION.cff  LICENSE  LICENSE.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  deploy_to_pypi.yml  deploy_to_testpypi.yml  test_and_deploy.yml  test_matrix_and_deploy.yml  test_os_matrix.yml  test_py_matrix.yml
docker/: dockerfile
docs/: conf.py  index.rst  requirements_rtd.txt
docs/_templates/autosummary/: class.rst
docs/source/: development.rst  first_steps.rst  guide_on_rois.rst  guide_on_smlmdata_and_collections.rst  installation.rst  introduction.rst  license.rst  modules.rst  widgets.rst
src/napari_locan/: __init__.py  _locdata.py  _sample_data.py  _scripts.py  _widget.py  _writer.py  napari.yaml
src/napari_locan/_tests/: conftest.py  test_filter_specifications.py  test_init.py  test_locdatas.py  test_reader.py  test_sample_data.py  test_smlm_data.py  test_widget.py  test_widget_clustering.py  test_widget_collection_series_2d.py  test_widget_filter_specifications.py  test_widget_load.py  test_widget_locdata_features.py  test_widget_locdatas.py  test_widget_metadata.py  test_widget_napari_locan_project.py  test_widget_property_distribution.py  test_widget_render.py  test_widget_render2d.py  test_widget_render_collection_2d.py  test_widget_render_collection_features.py  test_widget_render_collection_series_2d.py  test_widget_render_features.py  test_widget_render_image_2d.py  test_widget_render_image_3d.py  test_widget_render_points_2d.py  test_widget_render_points_3d.py  test_widget_roi.py  test_widget_run_script.py  test_widget_select.py  test_widget_show_data.py  test_widget_show_points_2d.py  test_widget_show_points_3d.py  test_widget_show_properties.py  test_widget_smlm_data.py  test_writer.py
src/napari_locan/_tests/data_model/: test_data_model.py
src/napari_locan/_tests/widgets/: test_widget_clustering.py  test_widget_filter_specifications.py  test_widget_napari_locan_project.py  test_widget_render_image_3d.py  test_widget_render_points_2d.py  test_widget_roi.py  test_widget_show_metadata.py  test_widget_show_properties.py
src/napari_locan/data_model/: __init__.py  _filter.py  _locdata.py  data_model_base.py  filter.py  filter_specifications.py  region_specifications.py  roi_specifications.py  smlm_data.py
src/napari_locan/sample_data/: __init__.py  _sample_data.py  sample_data.py
src/napari_locan/scripts/: __init__.py  script_hello.py  script_load.py
src/napari_locan/tests/: __init__.py  test_import.py
src/napari_locan/widgets/: __init__.py  _widget_clustering.py  _widget_collection_series_2d.py  _widget_filter_specifications.py  _widget_load.py  _widget_locdata_features.py  _widget_locdatas.py  _widget_metadata.py  _widget_property_distribution.py  _widget_render.py  _widget_render2d.py  _widget_render_collection_2d.py  _widget_render_collection_features.py  _widget_render_collection_series_2d.py  _widget_render_features.py  _widget_render_image_2d.py  _widget_render_points_2d.py  _widget_render_points_3d.py  _widget_roi.py  _widget_run_script.py  _widget_select.py  _widget_show_data.py  _widget_show_metadata.py  _widget_show_points_2d.py  _widget_show_points_3d.py  _widget_show_properties.py  widget_clustering.py  widget_filter_specifications.py  widget_io_save.py  widget_load.py  widget_locdatas.py  widget_napari_locan_project.py  widget_property_distribution.py  widget_render_collection_2d.py  widget_render_collection_features.py  widget_render_features.py  widget_render_image_2d.py  widget_render_image_3d.py  widget_render_points_2d.py  widget_render_points_3d.py  (+8 more)
tests/: __init__.py
tests/data_model/: test_filter_specifications.py  test_region_specifications.py  test_roi_specifications.py
tests/widgets/: test_widget_io_save.py  test_widget_load.py  test_widget_render_collection_2d.py  test_widget_run_script.py  test_widget_select.py  test_widget_show_info.py  test_widget_show_properties.py  test_widget_smlm_data.py
