[metadata]
name = napari_locan
description = Use locan methods in napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/super-resolution/napari-locan
author = Sören Doose
author_email = soeren.doose@uni-wuerzburg.de
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/super-resolution/napari-locan/issues
    Documentation = https://github.com/super-resolution/napari-locan#README.md
    Source Code = https://github.com/super-resolution/napari-locan
    User Support = https://github.com/super-resolution/napari-locan/issues

[options]
packages = find:
install_requires =
    locan
    magicgui
    numpy
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-locan = napari_locan:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
